fix: unsquish equivalent pricing icons in default trade view (#114)

--- a/app/styles/globals/_equivalent-pricings.scss
+++ b/app/styles/globals/_equivalent-pricings.scss
@@ -18,10 +18,6 @@
 .results:not(.compact) .bt-equivalent-pricings {
   background-color: rgba(#fff, 0.1);
 
-  img {
-    width: 20px !important;
-  }
-
   &.bt-equivalent-pricings-equivalent {
     padding-top: 0 !important;
   }
